Push down featurette to avoid nav overlap

--- a/static/assets/scss/components/_hexagon-hero.scss
+++ b/static/assets/scss/components/_hexagon-hero.scss
@@ -161,7 +161,7 @@
       transform: scale(.75);
     }
     @include media-breakpoint-up(lg) {
-      top: -5rem;
+      top: -4rem;
     }
     @include media-breakpoint-up(xl) {
       left: -12rem;
